LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PROF_BIODATA__c.field-meta.xml
<CustomField>
    <fullName>PROF_BIODATA__c</fullName>
    <description>PROF_BIODATA</description>
    <externalDeveloperName>PROF_BIODATA</externalDeveloperName>
    <label>PROF_BIODATA</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>