LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/QUAL_PCAOB1__c.field-meta.xml
<CustomField>
    <fullName>QUAL_PCAOB1__c</fullName>
    <description>QUAL_PCAOB1</description>
    <externalDeveloperName>QUAL_PCAOB1</externalDeveloperName>
    <label>QUAL_PCAOB1</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>