LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/QUAL_PCAOB2__c.field-meta.xml
<CustomField>
    <fullName>QUAL_PCAOB2__c</fullName>
    <description>QUAL_PCAOB2</description>
    <externalDeveloperName>QUAL_PCAOB2</externalDeveloperName>
    <label>QUAL_PCAOB2</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>