LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/QUALIFICATION_STATUS__c.field-meta.xml
<CustomField>
    <fullName>QUALIFICATION_STATUS__c</fullName>
    <description>QUALIFICATION_STATUS</description>
    <externalDeveloperName>QUALIFICATION_STATUS</externalDeveloperName>
    <label>QUALIFICATION_STATUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>