LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RATING_CODE__c.field-meta.xml
<CustomField>
    <fullName>RATING_CODE__c</fullName>
    <description>RATING_CODE</description>
    <externalDeveloperName>RATING_CODE</externalDeveloperName>
    <label>RATING_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>