LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/REASON__c.field-meta.xml
<CustomField>
    <fullName>REASON__c</fullName>
    <description>REASON</description>
    <externalDeveloperName>REASON</externalDeveloperName>
    <label>REASON</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>