LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/REASON_LEAVING__c.field-meta.xml
<CustomField>
    <fullName>REASON_LEAVING__c</fullName>
    <description>REASON_LEAVING</description>
    <externalDeveloperName>REASON_LEAVING</externalDeveloperName>
    <label>REASON_LEAVING</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>