LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/REGISTER_UNDER__c.field-meta.xml
<CustomField>
    <fullName>REGISTER_UNDER__c</fullName>
    <description>REGISTER_UNDER</description>
    <externalDeveloperName>REGISTER_UNDER</externalDeveloperName>
    <label>REGISTER_UNDER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>