LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RELATIONSHIP_WITH_NOMINEE__c.field-meta.xml
<CustomField>
    <fullName>RELATIONSHIP_WITH_NOMINEE__c</fullName>
    <description>RELATIONSHIP_WITH_NOMINEE</description>
    <externalDeveloperName>RELATIONSHIP_WITH_NOMINEE</externalDeveloperName>
    <label>RELATIONSHIP_WITH_NOMINEE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>