LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RELIEVING_LETT__c.field-meta.xml
<CustomField>
    <fullName>RELIEVING_LETT__c</fullName>
    <description>RELIEVING_LETT</description>
    <externalDeveloperName>RELIEVING_LETT</externalDeveloperName>
    <label>RELIEVING_LETT</label>
    <length>1</length>
    <type>Text</type>
</CustomField>