LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RELIGION__c.field-meta.xml
<CustomField>
    <fullName>RELIGION__c</fullName>
    <description>RELIGION</description>
    <externalDeveloperName>RELIGION</externalDeveloperName>
    <label>RELIGION</label>
    <length>50</length>
    <type>Text</type>
</CustomField>