LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/REPORT_PARTNER__c.field-meta.xml
<CustomField>
    <fullName>REPORT_PARTNER__c</fullName>
    <description>REPORT_PARTNER</description>
    <externalDeveloperName>REPORT_PARTNER</externalDeveloperName>
    <label>REPORT_PARTNER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>