LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RESUME__c.field-meta.xml
<CustomField>
    <fullName>RESUME__c</fullName>
    <description>RESUME</description>
    <externalDeveloperName>RESUME</externalDeveloperName>
    <label>RESUME</label>
    <length>1</length>
    <type>Text</type>
</CustomField>