LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/REVENUE_ID__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_ID__c</fullName>
    <description>REVENUE_ID</description>
    <externalDeveloperName>REVENUE_ID</externalDeveloperName>
    <label>REVENUE_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>