LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/REVISED_COMPLETIONDATE__c.field-meta.xml
<CustomField>
    <fullName>REVISED_COMPLETIONDATE__c</fullName>
    <description>REVISED_COMPLETIONDATE</description>
    <externalDeveloperName>REVISED_COMPLETIONDATE</externalDeveloperName>
    <label>REVISED_COMPLETIONDATE</label>
    <type>DateTime</type>
</CustomField>