LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RPLOC__c.field-meta.xml
<CustomField>
    <fullName>RPLOC__c</fullName>
    <description>RPLOC</description>
    <externalDeveloperName>RPLOC</externalDeveloperName>
    <label>RPLOC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>