LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RPSECTOR__c.field-meta.xml
<CustomField>
    <fullName>RPSECTOR__c</fullName>
    <description>RPSECTOR</description>
    <externalDeveloperName>RPSECTOR</externalDeveloperName>
    <label>RPSECTOR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>