LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RPSERVICE__c.field-meta.xml
<CustomField>
    <fullName>RPSERVICE__c</fullName>
    <description>RPSERVICE</description>
    <externalDeveloperName>RPSERVICE</externalDeveloperName>
    <label>RPSERVICE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>