LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RPT_ADMIN__c.field-meta.xml
<CustomField>
    <fullName>RPT_ADMIN__c</fullName>
    <description>RPT_ADMIN</description>
    <externalDeveloperName>RPT_ADMIN</externalDeveloperName>
    <label>RPT_ADMIN</label>
    <length>8</length>
    <type>Text</type>
</CustomField>