LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RPT_FUNCTIONALITY__c.field-meta.xml
<CustomField>
    <fullName>RPT_FUNCTIONALITY__c</fullName>
    <description>RPT_FUNCTIONALITY</description>
    <externalDeveloperName>RPT_FUNCTIONALITY</externalDeveloperName>
    <label>RPT_FUNCTIONALITY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>