LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/RPT_TEMP_AID__c.field-meta.xml
<CustomField>
    <fullName>RPT_TEMP_AID__c</fullName>
    <description>RPT_TEMP_AID</description>
    <externalDeveloperName>RPT_TEMP_AID</externalDeveloperName>
    <label>RPT_TEMP_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>