LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SALESFORCE_SYNC__c.field-meta.xml
<CustomField>
    <fullName>SALESFORCE_SYNC__c</fullName>
    <description>SALESFORCE_SYNC</description>
    <externalDeveloperName>SALESFORCE_SYNC</externalDeveloperName>
    <label>SALESFORCE_SYNC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>