LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SECTOR__c.field-meta.xml
<CustomField>
    <fullName>SECTOR__c</fullName>
    <description>SECTOR</description>
    <externalDeveloperName>SECTOR</externalDeveloperName>
    <label>SECTOR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>