LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SERVICE_LINE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_LINE__c</fullName>
    <description>SERVICE_LINE</description>
    <externalDeveloperName>SERVICE_LINE</externalDeveloperName>
    <label>SERVICE_LINE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>