LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SIN__c.field-meta.xml
<CustomField>
    <fullName>SIN__c</fullName>
    <description>SIN</description>
    <externalDeveloperName>SIN</externalDeveloperName>
    <label>SIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>