LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/STAFF_TRACKING_HEAD__c.field-meta.xml
<CustomField>
    <fullName>STAFF_TRACKING_HEAD__c</fullName>
    <description>STAFF_TRACKING_HEAD</description>
    <externalDeveloperName>STAFF_TRACKING_HEAD</externalDeveloperName>
    <label>STAFF_TRACKING_HEAD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>