LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>SUFFIX__c</fullName>
    <description>SUFFIX</description>
    <externalDeveloperName>SUFFIX</externalDeveloperName>
    <label>SUFFIX</label>
    <length>10</length>
    <type>Text</type>
</CustomField>