LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SUP_GSTN__c.field-meta.xml
<CustomField>
    <fullName>SUP_GSTN__c</fullName>
    <description>SUP_GSTN</description>
    <externalDeveloperName>SUP_GSTN</externalDeveloperName>
    <label>SUP_GSTN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>