LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SUP_PAN_NO__c.field-meta.xml
<CustomField>
    <fullName>SUP_PAN_NO__c</fullName>
    <description>SUP_PAN_NO</description>
    <externalDeveloperName>SUP_PAN_NO</externalDeveloperName>
    <label>SUP_PAN_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>