LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/SUPP_PROF__c.field-meta.xml
<CustomField>
    <fullName>SUPP_PROF__c</fullName>
    <description>SUPP_PROF</description>
    <externalDeveloperName>SUPP_PROF</externalDeveloperName>
    <label>SUPP_PROF</label>
    <length>1</length>
    <type>Text</type>
</CustomField>