LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/TAX_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>TAX_AMOUNT__c</fullName>
    <description>TAX_AMOUNT</description>
    <externalDeveloperName>TAX_AMOUNT</externalDeveloperName>
    <label>TAX_AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>