LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/TIN__c.field-meta.xml
<CustomField>
    <fullName>TIN__c</fullName>
    <description>TIN</description>
    <externalDeveloperName>TIN</externalDeveloperName>
    <label>TIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>