LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/TRAVEL_SYNC__c.field-meta.xml
<CustomField>
    <fullName>TRAVEL_SYNC__c</fullName>
    <description>TRAVEL_SYNC</description>
    <externalDeveloperName>TRAVEL_SYNC</externalDeveloperName>
    <label>TRAVEL_SYNC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>