LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/UNQ_REG_NO__c.field-meta.xml
<CustomField>
    <fullName>UNQ_REG_NO__c</fullName>
    <description>UNQ_REG_NO</description>
    <externalDeveloperName>UNQ_REG_NO</externalDeveloperName>
    <label>UNQ_REG_NO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>