LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/VPF_DATE__c.field-meta.xml
<CustomField>
    <fullName>VPF_DATE__c</fullName>
    <description>VPF_DATE</description>
    <externalDeveloperName>VPF_DATE</externalDeveloperName>
    <label>VPF_DATE</label>
    <type>DateTime</type>
</CustomField>