LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/VPF_NO__c.field-meta.xml
<CustomField>
    <fullName>VPF_NO__c</fullName>
    <description>VPF_NO</description>
    <externalDeveloperName>VPF_NO</externalDeveloperName>
    <label>VPF_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>