LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/VPF_RATE__c.field-meta.xml
<CustomField>
    <fullName>VPF_RATE__c</fullName>
    <description>VPF_RATE</description>
    <externalDeveloperName>VPF_RATE</externalDeveloperName>
    <label>VPF_RATE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>