LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/WEBSITE__c.field-meta.xml
<CustomField>
    <fullName>WEBSITE__c</fullName>
    <description>WEBSITE</description>
    <externalDeveloperName>WEBSITE</externalDeveloperName>
    <label>WEBSITE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>