LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>WEIGHT__c</fullName>
    <description>WEIGHT</description>
    <externalDeveloperName>WEIGHT</externalDeveloperName>
    <label>WEIGHT</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>